--- a/index.html
+++ b/index.html
@@ -1,81 +1,88 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <title>WW2 Visualization</title>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="http://d3js.org/queue.v1.min.js"></script>
+  <script src="http://d3js.org/topojson.v1.min.js"></script>
 <style>
 
-.graticule {
+.counties {
   fill: none;
-  stroke: #777;
-  stroke-width: .5px;
-  stroke-opacity: .5;
 }
 
-.land {
-  fill: #222;
-}
-
-.county-boundary {
+.states {
   fill: none;
   stroke: #fff;
-  stroke-width: .5px;
+  stroke-linejoin: round;
 }
 
-.state-boundary {
-  fill: none;
-  stroke: #fff;
-}
+.q0-9 { fill:rgb(247,251,255); }
+.q1-9 { fill:rgb(222,235,247); }
+.q2-9 { fill:rgb(198,219,239); }
+.q3-9 { fill:rgb(158,202,225); }
+.q4-9 { fill:rgb(107,174,214); }
+.q5-9 { fill:rgb(66,146,198); }
+.q6-9 { fill:rgb(33,113,181); }
+.q7-9 { fill:rgb(8,81,156); }
+.q8-9 { fill:rgb(8,48,107); }
 
 </style>
+</head>
+
 <body>
-<script src="//d3js.org/d3.v3.min.js"></script>
-<script src="//d3js.org/topojson.v1.min.js"></script>
+
 <script>
 
 var width = 960,
-    height = 500;
+    height = 600;
 
-var projection = d3.geo.albers()
-    .rotate([0, 0])
-    .center([-.6, 38.7])
-    .parallels([29.5, 45.5])
-    .scale(1070)
-    .translate([width / 2, height / 2])
-    .precision(.1);
+var rateById = d3.map();
+
+var quantize = d3.scale.quantize()
+    .domain([0, .15])
+    .range(d3.range(9).map(function(i) { return "q" + i + "-9"; }));
+
+var projection = d3.geo.albersUsa()
+    .scale(1280)
+    .translate([width / 2, height / 2]);
 
 var path = d3.geo.path()
     .projection(projection);
 
-var graticule = d3.geo.graticule()
-    .extent([[-98 - 45, 38 - 45], [-98 + 45, 38 + 45]])
-    .step([5, 5]);
+var svg = d3.select("body")
+              .append("svg")
+              .attr("width", width)
+              .attr("height", height);
 
-var svg = d3.select("body").append("svg")
-    .attr("width", width)
-    .attr("height", height);
+queue()
+    .defer(d3.json, "us.json")
+    .defer(d3.tsv, "unemployment.tsv", function(d) { rateById.set(d.id, +d.rate); })
+    .await(ready);
 
-svg.append("path")
-    .datum(graticule)
-    .attr("class", "graticule")
-    .attr("d", path);
-
-d3.json("/mbostock/raw/4090846/us.json", function(error, us) {
+function ready(error, us) {
   if (error) throw error;
 
-  svg.insert("path", ".graticule")
-      .datum(topojson.feature(us, us.objects.land))
-      .attr("class", "land")
+  svg.append("g")
+      .attr("class", "counties")
+    .selectAll("path")
+      .data(topojson.feature(us, us.objects.counties).features)
+    .enter().append("path")
+      .attr("class", function(d) { return quantize(rateById.get(d.id)); })
       .attr("d", path);
 
-  svg.insert("path", ".graticule")
-      .datum(topojson.mesh(us, us.objects.counties, function(a, b) { return a !== b && !(a.id / 1000 ^ b.id / 1000); }))
-      .attr("class", "county-boundary")
-      .attr("d", path);
-
-  svg.insert("path", ".graticule")
+  svg.append("path")
       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
-      .attr("class", "state-boundary")
+      .attr("class", "states")
       .attr("d", path);
-});
+}
 
 d3.select(self.frameElement).style("height", height + "px");
 
 </script>
+</body>
+</html>
+
+
