--- a/index.html
+++ b/index.html
@@ -7,82 +7,92 @@
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://d3js.org/queue.v1.min.js"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <script src="datamaps.world.min.js"></script> <!-- documentation https://github.com/markmarkoh/datamaps -->
 <style>
-
-.counties {
-  fill: none;
-}
-
-.states {
-  fill: none;
-  stroke: #fff;
-  stroke-linejoin: round;
-}
-
-.q0-9 { fill:rgb(247,251,255); }
-.q1-9 { fill:rgb(222,235,247); }
-.q2-9 { fill:rgb(198,219,239); }
-.q3-9 { fill:rgb(158,202,225); }
-.q4-9 { fill:rgb(107,174,214); }
-.q5-9 { fill:rgb(66,146,198); }
-.q6-9 { fill:rgb(33,113,181); }
-.q7-9 { fill:rgb(8,81,156); }
-.q8-9 { fill:rgb(8,48,107); }
-
 </style>
 </head>
 
 <body>
 
+<div id="map"></div>
+
+Bubbles: <input type="checkbox" onchange="toggleBubbles();" checked /><br />
+
+
 <script>
 
-var width = 960,
-    height = 600;
+var bubble_map = new Datamap({
+    height:660,
+    width:960,
+    projection:"mercator",
+    element: document.getElementById("map"),
+    geographyConfig: {
+        popupOnHover: true,
+        highlightOnHover: true
+    },
+    fills: {
+        defaultFill: '#ABDDA4',
+        Attacker: 'red',
+        Defender: 'blue'
+    }
+});
+var bubblesShow = true;
+var bubble_popup = function(geo, data) {
+  return '<div class="hoverinfo">Yield:' + data.yeild + 'Exploded on ' + data.date + ' by the '  + data.country + '';
+};
+var bubbles = [
+  {
+    name: 'Not a bomb, but centered on Brazil',
+    radius: 23,
+    centered: 'BEL',
+    country: 'USA',
+    yeild: 0,
+    fillKey: 'Attacker',
+    date: '1954-03-01'
+  },
+  {
+    name: 'Castle Bravo',
+    radius: 25,
+    yeild: 15000,
+    country: 'USA',
+    significance: 'First dry fusion fuel "staged" thermonuclear weapon; a serious nuclear fallout accident occurred',
+    fillKey: 'Attacker',
+    date: '1954-03-01',
+    latitude: 11.415,
+    longitude: 165.1619
+  },{
+    name: 'Tsar Bomba',
+    radius: 70,
+    yeild: 50000,
+    country: 'USSR',
+    fillKey: 'Defender',
+    significance: 'Largest thermonuclear weapon ever tested—scaled down from its initial 100 Mt design by 50%',
+    date: '1961-10-31',
+    latitude: 73.482,
+    longitude: 54.5854
+  }
+];
+var toggleBubbles = function() {
+    if(bubblesShow) {
+        bubble_map.bubbles([]);
+        bubblesShow = false;
+    } else {
+        bubble_map.bubbles(bubbles, {popupTemplate: bubble_popup });
+        bubblesShow = true;
+    }
+};
 
-var rateById = d3.map();
+var map_bubbles = function(dataSet) {
+    //TODO
+    return dataSet.map(function(dataPoint) {
 
-var quantize = d3.scale.quantize()
-    .domain([0, .15])
-    .range(d3.range(9).map(function(i) { return "q" + i + "-9"; }));
+    });
 
-var projection = d3.geo.albersUsa()
-    .scale(1280)
-    .translate([width / 2, height / 2]);
+};
 
-var path = d3.geo.path()
-    .projection(projection);
-
-var svg = d3.select("body")
-              .append("svg")
-              .attr("width", width)
-              .attr("height", height);
-
-queue()
-    .defer(d3.json, "us.json")
-    .defer(d3.tsv, "unemployment.tsv", function(d) { rateById.set(d.id, +d.rate); })
-    .await(ready);
-
-function ready(error, us) {
-  if (error) throw error;
-
-  svg.append("g")
-      .attr("class", "counties")
-    .selectAll("path")
-      .data(topojson.feature(us, us.objects.counties).features)
-    .enter().append("path")
-      .attr("class", function(d) { return quantize(rateById.get(d.id)); })
-      .attr("d", path);
-
-  svg.append("path")
-      .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
-      .attr("class", "states")
-      .attr("d", path);
-}
-
-d3.select(self.frameElement).style("height", height + "px");
-
+bubble_map.bubbles(bubbles, {
+  popupTemplate: bubble_popup
+});
 </script>
 </body>
 </html>
-
-
