--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script src="http://d3js.org/queue.v1.min.js"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
   <script src="datamaps.world.min.js"></script> <!-- documentation https://github.com/markmarkoh/datamaps -->
-<style>
-</style>
+  <!-- Slider stylesheet -->
+  <link rel="stylesheet" href="slider.css">
 </head>
 
 <body>
@@ -22,9 +22,13 @@ Bubbles: <input type="checkbox" onchange="toggleBubbles();" checked /><br />
 
 <script>
 
+var margin = {top: 50, right: 50, bottom: 50, left: 50},
+    width = 960 - margin.left - margin.right,
+    height = 660 - margin.top - margin.bottom;
+
 var bubble_map = new Datamap({
-    height:660,
-    width:960,
+    height: height,
+    width: width,
     projection:"mercator",
     element: document.getElementById("map"),
     geographyConfig: {
@@ -104,6 +108,110 @@ var resetZoom = function () {
 bubble_map.bubbles(bubbles, {
   popupTemplate: bubble_popup
 });
+
+
+//
+formatDate = d3.time.format("%b %d %Y");
+
+// Time scale funtion
+var timeScale = d3.time.scale()
+  .domain([new Date('1939-01-01'),new Date('1945-12-31')])
+  .range([0,width])
+  .clamp(true);
+
+// init values
+var sliderStartDate = timeScale(new Date('1940-11-3'));
+
+startingValue = new Date('1941-03-20');
+endingValue = new Date('1942-03-20');
+// brush
+var brush = d3.svg.brush()
+  .x(timeScale)
+  .extent([startingValue,endingValue])
+  //.on("brushstart", brushstart)
+  .on("brush", brushed)
+  //.on("brushend", brushend);
+
+// slider svg
+var sliderHeight = 100;
+
+var sliderSvg = d3.select("body").append("svg")
+  .attr("width", width + margin.left + margin.right )
+  .attr("height", sliderHeight + margin.top + margin.bottom)
+  .append("g")
+  // classic transform to position g
+  .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+sliderSvg.append("g")
+  .attr("class", "x axis")
+  // put in middle of screen
+  .attr("transform", "translate(0," + sliderHeight / 2 + ")")
+  // inroduce axis
+  .call(d3.svg.axis()
+    .scale(timeScale)
+    .orient("bottom")
+    .tickFormat(function(d) {
+      return formatDate(d);
+    })
+    .tickSize(0)
+    .tickPadding(12)
+    .tickValues([timeScale.domain()[0], timeScale.domain()[1]]))
+    .select(".domain")
+    .select(function() {
+      console.log(this);
+      return this.parentNode.appendChild(this.cloneNode(true));
+    })
+    .attr("class", "halo");
+
+var slider = sliderSvg.append("g")
+  .attr("class", "slider")
+  .call(brush);
+
+slider.select(".background")
+  .attr("height", sliderHeight);
+
+slider.selectAll(".resize")
+  .append("path")
+  .attr("d", "M 0 -20 V 20")
+
+slider.selectAll("rect")
+    .attr("height", sliderHeight);
+
+var handleLeft = slider.append("g")
+  .attr("class", "handle")
+
+handleLeft.append("path")
+  .attr("transform", "translate(0," + sliderHeight / 2 + ")")
+  .attr("d", "M 0 -20 V 20")
+
+handleLeft.append('text')
+  .text(startingValue)
+  .attr("transform", "translate(" + (-18) + " ," + (sliderHeight / 2 - 25) + ")");
+
+var handleRight = slider.append("g")
+  .attr("class", "handle")
+
+handleRight.append("path")
+  .attr("transform", "translate(0," + sliderHeight / 2 + ")")
+  .attr("d", "M 0 -20 V 20")
+
+handleRight.append('text')
+  .text(endingValue)
+  .attr("transform", "translate(" + (-18) + " ," + (sliderHeight / 2 - 25) + ")");
+
+slider
+  .call(brush.event)
+
+function brushed() {
+  var value = brush.extent();
+
+  handleLeft.attr("transform", "translate(" + timeScale(value[0]) + ",0)");
+  handleLeft.select('text').text(formatDate(value[0]));
+
+  handleRight.attr("transform", "translate(" + timeScale(value[1]) + ",0)");
+  handleRight.select('text').text(formatDate(value[1]));
+}
+
 </script>
 </body>
 </html>
