--- a/index.html
+++ b/index.html
@@ -22,67 +22,100 @@ Bubbles: <input type="checkbox" onchange="toggleBubbles();" checked /><br />
 
 <script>
 
+
 var margin = {top: 50, right: 50, bottom: 50, left: 50},
     width = 960 - margin.left - margin.right,
     height = 660 - margin.top - margin.bottom;
 
-var bubble_map = new Datamap({
-    height: height,
-    width: width,
-    projection:"mercator",
-    element: document.getElementById("map"),
-    geographyConfig: {
-        popupOnHover: true,
-        highlightOnHover: true
-    },
-    fills: {
-        defaultFill: '#ABDDA4',
-        Attacker: 'red',
-        Defender: 'blue'
-    },
-    done: function(datamap) {
-        datamap.svg.call(d3.behavior.zoom().on("zoom", redraw));
-        function redraw() {
-            datamap.svg.selectAll("g").attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
-        };
-    }
+var bubble_map, dataset;
+
+d3.json("./data.json", function(err, data) {
+    dataset = data;
+    build_map();
 });
+
+var build_map = function() {
+    bubble_map = new Datamap({
+        height: height,
+        width: width,
+        projection:"mercator",
+        geographyConfig: {
+            dataUrl: './topotest.json',
+            popupOnHover: true,
+            highlightOnHover: true,
+            popupTemplate: function(geo, data) {
+                var n = geo.properties.name;
+                return '<div class="hoverinfo">'+
+                    '<strong>' + geo.properties.name +'</strong><br />'+
+                    'civ_max: ' + (dataset[n] ? dataset[n].civ_max : 'No Data')  +
+                    '</div>';
+            }
+        },
+        setProjection: function(element, options) {
+            var projection, path;
+            projection = d3.geo.mercator()
+                .scale(960/2)
+                .translate([460, 800]);
+            path = d3.geo.path()
+                .projection( projection );
+
+            return {path: path, projection: projection};
+        },
+        scope: 'cshapes',
+        element: document.getElementById("map"),
+        fills: {
+            defaultFill: '#ABDDA4',
+            Attacker: 'red',
+            Defender: 'blue'
+        },
+        done: function(datamap) {
+            datamap.svg.call(d3.behavior.zoom().on("zoom", redraw));
+            function redraw() {
+                datamap.svg.selectAll("g").attr("transform", "translate(" + d3.event.translate + ")scale(" + d3.event.scale + ")");
+            };
+        }
+    });
+    bubble_map.bubbles(bubbles, {
+      popupTemplate: bubble_popup
+    });
+};
 var bubblesShow = true;
 var bubble_popup = function(geo, data) {
   return '<div class="hoverinfo">Yield:' + data.yeild + 'Exploded on ' + data.date + ' by the '  + data.country + '';
 };
 var bubbles = [
-  {
-    name: 'Not a bomb, but centered on Brazil',
-    radius: 23,
-    centered: 'BEL',
-    country: 'USA',
-    yeild: 0,
-    fillKey: 'Attacker',
-    date: '1954-03-01'
-  },
-  {
-    name: 'Castle Bravo',
-    radius: 25,
-    yeild: 15000,
-    country: 'USA',
-    significance: 'First dry fusion fuel "staged" thermonuclear weapon; a serious nuclear fallout accident occurred',
-    fillKey: 'Attacker',
-    date: '1954-03-01',
-    latitude: 11.415,
-    longitude: 165.1619
-  },{
-    name: 'Tsar Bomba',
-    radius: 70,
-    yeild: 50000,
-    country: 'USSR',
-    fillKey: 'Defender',
-    significance: 'Largest thermonuclear weapon ever tested—scaled down from its initial 100 Mt design by 50%',
-    date: '1961-10-31',
-    latitude: 73.482,
-    longitude: 54.5854
-  }
+  // {
+  //   name: 'Not a bomb, but centered on Brazil',
+  //   radius: 23,
+  //   centered: 'BEL',
+  //   country: 'USA',
+  //   yeild: 0,
+  //   fillKey: 'Attacker',
+  //   date: '1954-03-01'
+  // },
+  // {
+  //   name: 'Castle Bravo',
+  //   radius: 25,
+  //   yeild: 15000,
+  //   country: 'USA',
+  //   significance: 'First dry fusion fuel "staged" thermonuclear weapon; a serious nuclear fallout accident occurred',
+  //   fillKey: 'Attacker',
+  //   date: '1954-03-01',
+  //   latitude: 11.415,
+  //   longitude: 165.1619
+  // },{
+  //   name: 'Tsar Bomba',
+  //   radius: 70,
+  //   yeild: 50000,
+  //   country: 'USSR',
+  //   fillKey: 'Defender',
+  //   significance: 'Largest thermonuclear weapon ever tested—scaled down from its initial 100 Mt design by 50%',
+  //   date: '1961-10-31',
+  //   latitude: 73.482,
+  //   longitude: 54.5854
+  // }
 ];
+
 var toggleBubbles = function() {
     if(bubblesShow) {
         bubble_map.bubbles([]);
@@ -93,21 +126,11 @@ var toggleBubbles = function() {
     }
 };
 
-var map_bubbles = function(dataSet) {
-    //TODO
-    return dataSet.map(function(dataPoint) {
-
-    });
-
-};
-
 var resetZoom = function () {
     bubble_map.svg.selectAll("g").attr("transform", "translate(0,0)scale(1.0)");
 };
 
-bubble_map.bubbles(bubbles, {
-  popupTemplate: bubble_popup
-});
+
 
 
 //
