--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="cache-control" content="no-cache">
+<meta http-equiv="expires" content="0">
+<meta http-equiv="pragma" content="no-cache">
   <title>WW2 Visualization</title>
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://d3js.org/queue.v1.min.js"></script>
@@ -31,7 +34,7 @@ var bubble_map, dataset, battles;
 
 d3.json("./data.json", function(err, data) {
     dataset = data;
-    d3.json("./battles.json", function(err, data2) {
+    d3.json("./battles.json?"+ Math.floor(Math.random() * 1000), function(err, data2) {
         if(err) console.log(err);
         battles = data2;
         build_map();
@@ -44,7 +47,7 @@ var build_map = function() {
         width: width,
         projection:"mercator",
         geographyConfig: {
-            dataUrl: './topotest.json',
+            dataUrl: './topotest.json?'+ Math.floor(Math.random() * 1000),
             popupOnHover: true,
             highlightOnHover: true,
             popupTemplate: function(geo, data) {
@@ -85,7 +88,23 @@ var build_map = function() {
 };
 var bubblesShow = true;
 var bubble_popup = function(geo, data) {
-  return '<div class="hoverinfo">Name:' + data.obj.name + ' Start Date ' + data.obj.start_date + ' by the '  + data.country + '';
+    var arr = [];
+    data.obj.participants.axis.forEach(function(c) {
+        arr.push({
+            origin: data.obj.location,
+            destination: c,
+            strokeColor: 'red'
+        });
+    });
+    data.obj.participants.allied.forEach(function(c) {
+        arr.push({
+            origin: data.obj.location,
+            destination: c,
+            strokeColor: 'blue'
+        });
+    });
+    bubble_map.arc(arr, {strokeWidth: 2, arcSharpness: 1.4});
+    return '<div class="hoverinfo">Name:' + data.obj.name + ' Start Date ' + data.obj.start_date + ' by the '  + data.country + '';
 };
 var bubbles = [
   // {
@@ -121,7 +140,9 @@ var bubbles = [
 ];
 
 var battle_map = function() {
+    console.log(battles);
     return battles.map(function(b) {
+        console.log(b.name);
         return {
             radius: b.casualities/80000,
             fillKey:'Attacker',
